--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^1.0.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "mongoose": "^4.13.5",
     "morgan": "^1.9.0",
